dark mode fixes

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -65,7 +65,7 @@ html.themeDark {
 
     .frame { background: $colorBlack; }
 
-    .textarea { background: $colorBgIcon; }
+    .textarea { background: $colorHover; }
 
     .switch { background: $colorBgInactive; }
 
